--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,7 @@ header h1 {
   background-color: rgba(0, 0, 0, 0.8);
 }
 header h1 img {
-  width: 20%;
-  min-width: 200px;
+  width: 150px;
 }
 
 h2 {
